<resources>
    <string name="app_name">EventManagement</string>
    <string name="login">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="please_enter_your_email_address">Please enter your email address</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="incorrect_email_or_password">Incorrect email or password</string>
    <string name="active_events">Active events</string>
    <string name="future_events">Future events</string>
    <string name="not_started_events">Not started events</string>
    <string name="my_profile">My profile</string>
    <string name="logout">Log out</string>
    <string name="select_picture">Select picture</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="from_to">From - To</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="place">Place</string>
    <string name="event_topic">Event Topic</string>

    <string name="mtrl_picker_range_header_only_start_selected" >%s - To</string>
    <string name="mtrl_picker_range_header_only_end_selected" >From - %s</string>
    <string name="mtrl_picker_range_header_unselected" >Start date - End date</string>
    <string name="mtrl_picker_save" >SAVE</string>
    <string name="mtrl_picker_range_header_title">SELECT RANGE</string>

    <!--    <string name="topic"><font size="15">Topic</font></string>-->
</resources>