<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageButton
        android:id="@+id/btnClose"
        android:layout_gravity="end"
        android:src="@drawable/ic_baseline_close_24"
        android:background="@color/white"
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edtEventName"
        android:background="@drawable/edit_text_style"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edtStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:background="@drawable/edit_text_style"
        android:cursorVisible="false"
        android:drawableRight="@drawable/calendar"
        android:focusable="false"
        android:hint="@string/start_date"
        android:inputType="none" />

    <EditText
        android:id="@+id/edtEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_style"
        android:cursorVisible="false"
        android:drawableRight="@drawable/calendar"
        android:focusable="false"
        android:hint="@string/end_date"
        android:inputType="none" />

    <Spinner
        android:id="@+id/spinnerTopics"
        android:background="@drawable/spinner_style"
        android:padding="7dp"
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search" />

</LinearLayout>
